--- a/admin/.defaults.env
+++ b/admin/.defaults.env
@@ -11,5 +11,6 @@ ITA_SERVER="http://hubs.local:3333"
 # See here for the server code: https://github.com/mozilla/reticulum
 RETICULUM_SERVER="dev.reticulum.io"
 
+#IMPORTANT
 # PostgREST server configured to allow administrative access to the db.
 POSTGREST_SERVER="https://hubs.local:3000"
